# ParamHunter

./: MIT License  README.md  paramhunter.py  pyproject.toml  requirements.txt  urls_example.txt
.github/workflows/: ci.yml
paramhunter/: __init__.py  cli.py  core.py
tests/: test_core.py
