[project]
name = "paramhunter"
version = "0.8.1"
description = "CLI tool to extract URL parameters with concurrent requests and robust retries"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [ { name = "Harold Vanta" } ]
keywords = ["security", "bug bounty", "url parameters", "cli", "reconnaissance"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "Topic :: Security",
  "Topic :: Internet",
]
dependencies = [
  "requests>=2.32.0,<3",
  "urllib3>=2.2.0,<3",
]

[project.optional-dependencies]
rich = ["rich>=13.7.0,<14"]

[project.scripts]
paramhunter = "paramhunter.cli:main"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
]
ignore = []

[tool.ruff.isort]
known-first-party = ["paramhunter"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


